# habit_tracker

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_rename_th_chat_id_user_tg_chat_id.py
